[tool.poetry]
name = "popcorn"
version = "0.1.0"
description = "Show information about movie and movies"
authors = ["Icaro <icarornunes@gmail.com>"]
license = "BeerWare"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
certifi = "2022.12.7"
charset-normalizer = "3.1.0"
click = "8.1.3"
colorama = "0.4.6"
idna = "3.4"
markdown-it-py = "2.2.0"
mdurl = "0.1.2"
pygments = "2.14.0"
requests = "2.28.2"
rich = "13.3.2"
shellingham = "1.4.0"
typer = "0.7.0"
typer-cli = "0.0.13"
urllib3 = "1.26.14"
mkdocs = "1.4.2"
mkdocstrings = "0.20.0"
mkdocstrings-python = "0.9.0"
mkdocs-dracula-theme = "1.0.4"
pytest = "7.2.2"
pymdown-extensions = "9.10"
pytest-cov = "4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
